[package]
name = "bob-rust-interview"
version = "0.1.0"
edition = "2021"
authors = ["BOB"]
description = "Interview challenge"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic", "serde"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
